prevent word wrap on social media icons

--- a/css/main.css
+++ b/css/main.css
@@ -299,6 +299,7 @@ footer #copyright {
   text-decoration: none;
   margin-right: 10px;
   line-height: 4em;
+  white-space: nowrap;
 }
 
 .timeline {
